# alexnet-cnn-training

./: README.md  Topicos1-2026.1-Tarefa3.ipynb  pyproject.toml
