[project]
name = "alexnet-cnn-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "ptyprocess>=0.7.0",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "six>=1.17.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
